service page added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900');
+@import url('https://fonts.googleapis.com/css?family=Inter:300,400,500,700,900');
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 
 * {
@@ -124,4 +124,25 @@ a {
 .callout {
     padding-left: 1.5rem;
     border-left: .25rem solid red;
+}
+
+.mb-grid-gutter {
+    margin-bottom: 1.875rem !important;
+}
+
+.bg-repeat-0 {
+    background-repeat: no-repeat !important;
+}
+
+.bg-position-center {
+    background-position: center !important;
+}
+.fs-sm {
+    color: #9e9fb4;
+    font-size: 0.875rem !important;
+}
+.sbg-white {
+    background-color: #ffffff;
+    --bs-bg-opacity: 1;
+    background-color: rgba(var(--bs-white-rgb), var(--bs-bg-opacity)) !important;
 }
